--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <div class="space-y-6 text-center">
                 <button class="bg-white p-2 font-bold rounded-md"><i class="fa-solid fa-arrow-right"></i>  How we works</button>
                 <h1 class="text-[40px] font-bold text-[#212121]">Our Works Progress</h1>
-                <p class="font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
               </div>
               
               <div class="grid lg:grid-cols-4 grid-cols-1 md:grid-cols-2 gap-5 mt-7">
@@ -260,7 +260,7 @@
         <div class="text-center">
           <button class="bg-yellow-50 rounded-lg"><i class="fa-solid fa-arrow-right"></i> Explore our latest works</button>
           <h1 class="text-[40px] font-bold text-[#212121]">Our Latest Portfolio</h1>
-          <p class="font-medium text-[#494949] mt-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="font-medium text-[#494949] mt-6">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
         </div>
         <!-- card1 -->
         <div class="grid  grid-cols-1 lg:grid-cols-12 sm:grid-rows-2 grid-rows-1   gap-5 mt-8">
@@ -340,7 +340,7 @@
           <div class="text-center">
             <button class="bg-[#E5F3D6] rounded-lg"><i class="fa-solid fa-arrow-right"></i> Rinterio News</button>
             <h1 class="text-[40px] font-bold text-[#212121]">Read Our Articles and News</h1>
-            <p class="font-medium mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="font-medium mb-8">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
           </div>
          <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
             <!-- card 1 -->
@@ -409,7 +409,7 @@
       <button class="bg-[#E5F3D6] rounded-lg"><i class="fa-solid fa-arrow-right"></i> Let's Connect</button>
       <h1 class=" text-[40px] font-bold text-[#212121]">Let’s Discuss Next Project</h1>
       <p class="font-medium text-[#494949]">
-        The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
+        The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.
       </p>
      <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
       <input type="text" placeholder="First Name*" class="input input-bordered w-full rounded-3xl " />
@@ -448,8 +448,9 @@
         </footer>
       </div>
 
-
+      <hr>
     </footer>
+   
     
 </body>
 </html>
