footer resolved done

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <footer class="footer footer-center text-base-content rounded p-10">
          <h1> <a class="btn btn-ghost text-xl"><i class="fa-sharp-duotone fa-solid fa-circle-arrow-right text-primary -rotate-45 text-2xl"></i><span class="text-3x text-white font-extrabold">Rinterio</span></a></h1>
          <p class="text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
-          <nav class="grid grid-cols-1 grid-flow-col gap-4 text-[#E9E9E9]">
+          <nav class="grid grid-cols-1 lg:grid-flow-col gap-4 text-[#E9E9E9]">
             <a class="link link-hover">Home</a>
             <a class="link link-hover">Service</a>
             <a class="link link-hover">Portfolio</a>
